# SOC_Forgex

./: DEPLOYMENT_COMPLETE.md  DOCKER_SETUP.md  QUICKSTART.md  SERVICE_STATUS.md  docker-compose.yml  init-mongo.js
.github/: copilot-instructions.md
agents-service/: .env.example  Dockerfile  README.md  crewai.py  main.py  pyproject.toml  test_crewai_integration.py  trigger.py
agents-service/agents/: llm_client.py  models.py
agents-service/agents/agents/: __init__.py  incident_analyst.py  orchestrator_agent.py  threat_intel.py  triage_analyst.py
agents-service/agents/crewai/: __init__.py  api.py  app.py  config.py  crew.py  crew_runner.py  orchestrator.py  tasks.py  tool_wrappers.py
agents-service/agents/crewai/tools/: __init__.py  agent_output.py  case_tool.py  log_query.py
agents-service/agents/trigger/: __init__.py  api.py  app.py  config.py  kafka_consumer.py
case-service/: .env.example  Dockerfile  main.py  pyproject.toml
case-service/app/: main.py
case-service/app/api/dashboard/: alerts.py  api_keys.py  auth.py  incidents.py  stats.py  webhooks.py
case-service/app/api/internal/: agent_output.py  case_actions.py  incident_detail.py
case-service/app/api/public/: incidents.py
case-service/app/core/: config.py  dashboard_auth.py  security.py
case-service/app/models/: agent_output.py  dashboard.py
case-service/app/services/: api_key_service.py  dashboard_auth_service.py
case-service/case/: __init__.py  api.py  app.py  config.py  models.py  storage.py
case-service/tests/: __init__.py  conftest.py  test_api_internal.py  test_api_public.py  test_incident_service.py
case_service/app/api/public/: webhooks.py
case_service/app/models/: internal_case_action.py
case_service/app/services/: incident_service.py  notification_service.py
demo-app/: README.md  app.py  pyproject.toml
detection-scoring-engine/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
detection-scoring-engine/detection/: __init__.py  app.py  config.py  engine.py  kafka_consumer.py  kafka_producer.py  logging_conf.py  models.py  opensearch_client.py  processor.py
detection-scoring-engine/detection/api/: alerts.py
detection-scoring-engine/detection/rules/: __init__.py  admin_abuse.py  base.py  brute_force.py  data_exfil.py  error_storm.py  unusual_geo.py
detection-scoring-engine/tests/: conftest.py  test_api.py  test_engine.py  test_integration.py  test_rules.py
normalizer-service/: .env  .env.example  Dockerfile  README.md  main.py  pyproject.toml
normalizer-service/normalizer/: __init__.py  api.py  app.py  config.py  enrichment.py  geoip.py  kafka_consumer.py  kafka_producer.py  models.py  opensearch_client.py  processor.py
security_sdk/: LICENSE  README.md  pyproject.toml
security_sdk/security_sdk/: __init__.py  client.py  middleware.py  models.py  py.typed
soc-case-dashboard/: Dockerfile  README.md  requirements.txt
soc-case-dashboard/.streamlit/: config.toml
soc-case-dashboard/dashboard/: app.py
soc-case-dashboard/dashboard/modules/: __init__.py  alerts.py  api_keys.py  auth_store.py  hunting.py  incident_detail.py  incidents.py  login.py  overview.py  settings.py
soc-case-dashboard/dashboard/services/: __init__.py  app_client.py  dashboard_client.py
soc-ingestion/: Dockerfile  main.py  pyproject.toml
soc-ingestion/app/: auth.py  config.py  kafka.py  main.py  models.py  rate_limit.py  routes.py
