[project]
name = "agents-service"
version = "0.1.0"
description = "Agent orchestration service for SOC Forgex - CrewAI triggers and analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiokafka>=0.9.0",
    "httpx>=0.25.0",
    "structlog>=23.2.0",
    "python-dotenv>=1.2.1",
    "crewai>=0.28.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
]
