[project]
name = "case-service"
version = "0.1.0"
description = "Case management service for SOC Forgex - handles incident cases and agent outputs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    "python-dotenv>=1.2.1",
]
