[project]
name = "normalizer-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiokafka>=0.9.0",
    "opensearch-py>=2.4.0",
    "httpx>=0.25.0",
    "geoip2>=4.7.0",
    "structlog>=23.2.0",
    "python-dotenv>=1.2.1",
]
